Fix dark mode CSS glitches

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@
     --secondary-foreground: 228 84% 4%;
 
     --muted: 215 16% 46%;
-    --muted-foreground: 210 40% 98%;
+    --muted-foreground: 215 20% 65%;
 
     --accent: 228 84% 4%;
     --accent-foreground: 215 20% 65%;
